# Quantum_Singular_Value_Transformation

./: .gitattributes  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  RELEASING.md  RESULTS.md  ROADMAP.md  THEORY.md  USAGE.md  pyproject.toml  requirements.txt  simple_example.ipynb
.github/: FUNDING.yml
.github/workflows/: lint.yml  notebooks.yml  ordered-actions.yml  package.yml  pages.yml  publish.yml  release-check.yml  tests.yml
docs/: conf.py  index.md
docs/_static/: portfolio.css
docs/qsvt/: algorithms.md  api_reference.md  benchmark_results.md  benchmarks.md  block_encoding.md  changelog.md  classical_baselines.md  comparisons.md  compatibility.md  design.md  flagship_workflows.md  implementation.md  index.md  linear_systems.md  notebooks.md  physics.md  planning.md  presets.md  qsvt_reports.md  qsvt_resource_model.md  real_example_results.md  releasing.md  reports.md  research.md  result_gallery.md  results.md  roadmap.md  spectral_filters.md  stability.md  synthesis.md  templates.md  theory.md  time_evolution_and_response.md  tutorial_results.md  usage.md  workflow_block_encoded_qsvt.md  workflow_fermi_dirac.md  workflow_fixed_point_amplification.md  workflow_ground_state_filtering.md  workflow_hamiltonian_simulation.md  (+11 more)
examples/: README.md  accuracy_driven_plan.py  accuracy_resource_frontier.json  benchmark_summary.py  block_encoded_workflow.py  block_encoding_execution.py  circuit_execution.py  compatibility_report.py  custom_block_encoding.py  design_apply_report.py  encoding_aware_resources.py  finite_shot_qsvt.py  hamiltonian_simulation.py  linear_system_compare.py  poisson_qsvt.py  problem_workflow.py  rectangular_execution.py  spectral_filter_qsvt.py  threshold_filter.py
notebooks/: 01_QSVT_Scalar_and_Diagonal_Matrix.ipynb  01_QSVT_Scalar_and_Diagonal_Matrix.py  01_QSVT_Simple_Examples.ipynb  02_QSVT_Singular_Value_Filter.ipynb  02_QSVT_Singular_Value_Filter.py  03_QSP_Polynomial_Demo.ipynb  03_QSP_Polynomial_Demo.py  04_QSVT_Linear_Solver_2x2.ipynb  04_QSVT_Linear_Solver_2x2.py  04_QSVT_Linear_Solver_4x4.ipynb  04_QSVT_Linear_Solver_4x4.py  05_QSVT_Linear_Solver_Approximate.ipynb  05_QSVT_Linear_Solver_Approximate.py  06_QSVT_Polynomial_Design_and_Approximation.ipynb  06_QSVT_Polynomial_Design_and_Approximation.py  07_QSVT_Matrix_Functions_Powers_and_Roots.ipynb  07_QSVT_Matrix_Functions_Powers_and_Roots.py  08_QSVT_Sign_Function_and_Projectors.ipynb  08_QSVT_Sign_Function_and_Projectors.py  09_QSVT_Design_and_Templates.ipynb  __init__.py  _support.py
notebooks/benchmarks/: 01_linear_system_classical_vs_qsvt_proxy.ipynb  02_matrix_functions_spectral_baselines.ipynb  03_scaling_sweeps.ipynb  04_classical_baseline_assumptions.ipynb  05_quantum_walk_search_scaling.ipynb  06_encoding_aware_resources.ipynb  README.md
notebooks/real_examples/: 01_ground_state_filtering.ipynb  01_poisson_equation_pde.ipynb  02_hamiltonian_simulation_schrodinger_dynamics.ipynb  02_tight_binding_band_filter.ipynb  03_greens_function_response.ipynb  03_imaginary_time_filtering.ipynb  04_heat_equation_pde.ipynb  04_ising_phase_transition_filtering.ipynb  04_poisson_equation_pde.ipynb  05_fermi_dirac_electronic_occupations.ipynb  05_hamiltonian_simulation_schrodinger_dynamics.ipynb  05_poisson_equation_pde.ipynb  06_hamiltonian_simulation_schrodinger_dynamics.ipynb  06_quantum_chemistry_h2_toy_solver.ipynb  06_topological_band_projector_chern_marker.ipynb  07_greens_function_response.ipynb  07_quantum_chemistry_h2_toy_solver.ipynb  07_singular_value_pseudoinverse_deblurring.ipynb  08_greens_function_response.ipynb  08_matrix_log_entropy_graph_laplacian.ipynb  08_spectral_density_estimation.ipynb  09_gibbs_state_thermal_weights.ipynb  09_spectral_density_estimation.ipynb  10_gibbs_state_thermal_weights.ipynb  10_transport_physics_landauer_chain.ipynb  11_tensor_network_hybrid_filtering.ipynb  11_transport_physics_landauer_chain.ipynb  12_heat_equation_2d_pde.ipynb  12_tensor_network_hybrid_filtering.ipynb  13_advection_diffusion_pde.ipynb  13_heat_equation_2d_pde.ipynb  14_advection_diffusion_pde.ipynb  14_wave_equation_dynamics.ipynb  15_helmholtz_equation_pde.ipynb  15_wave_equation_dynamics.ipynb  16_helmholtz_equation_pde.ipynb  16_ssh_chain_edge_state_filtering.ipynb  17_anderson_localization.ipynb  17_quantum_walk_search_toy.ipynb  18_schrodinger_bound_states.ipynb  (+28 more)
notebooks/tutorials/: 01_QSVT_Scalar_and_Diagonal_Matrix.ipynb  02_QSVT_Singular_Value_Filter.ipynb  03_QSP_Polynomial_Demo.ipynb  04_QSVT_Exact_Linear_Solver_Toy_Cases.ipynb  04_QSVT_Linear_Solver_2x2.ipynb  05_QSVT_Approximate_Linear_Solver.ipynb  05_QSVT_Linear_Solver_4x4.ipynb  05_QSVT_Polynomial_Design_and_Approximation.ipynb  06_QSVT_Linear_Solver_Approximate.ipynb  06_QSVT_Matrix_Functions_Powers_and_Roots.ipynb  07_QSVT_Matrix_Functions_Powers_and_Roots.ipynb  07_QSVT_Polynomial_Design_and_Approximation.ipynb  07_QSVT_Sign_Function_and_Projectors.ipynb  08_QSVT_Design_and_Presets.ipynb  08_QSVT_Design_and_Templates.ipynb  08_QSVT_Matrix_Functions_Powers_and_Roots.ipynb  09_QSVT_Algorithm_Workflows.ipynb  09_QSVT_Sign_Function_and_Projectors.ipynb  10_QSVT_Design_and_Templates.ipynb  10_QSVT_Reports_CLI_and_Artifacts.ipynb  11_End_to_End_Algorithm_Workflows.ipynb  11_QSVT_Algorithm_Workflows.ipynb  (+24 more)
scripts/: extract_notebook_plots.py  release_check.py  update_notebook_results.sh
tests/: test_algorithm_workflow_regressions.py  test_benchmark_artifacts.py  test_benchmarks.py  test_block_encoding.py  test_cookbook_examples.py  test_core_utility_coverage.py  test_design.py  test_execution.py  test_extract_notebook_plots.py  test_flagship_acceptance.py  test_hardware_execution.py  test_hhl_execution.py  test_notebook_helpers.py  test_notebook_reproducibility.py  test_numerical_properties.py  test_physics_helpers.py  test_planning_and_flagships.py  test_presets.py  test_qsvt_smoke.py  test_real_example_notebooks.py  test_release_metadata.py  test_reports.py  test_research.py  test_resources.py  test_synthesis.py  test_templates.py  test_validation_and_cli.py  test_workflow_and_refactor.py
(+98 files in other folders)
