[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "qsvt-pennylane"
version = "0.1.7"
description = "Educational utilities and examples for Quantum Singular Value Transformation (QSVT) using PennyLane."
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "Sid Richards" }
]

license = "MIT"

license-files = ["LICENSE"]

classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Mathematics",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",

  "Operating System :: OS Independent",
]

dependencies = [
  "pennylane>=0.36",
  "numpy>=1.23",
  "matplotlib>=3.7",
]


[project.optional-dependencies]
lint = [
  "black[jupyter]",
  "ruff",
]

test = [
  "pytest>=7",
  "pytest-cov>=5",
]

dev = [
  "black[jupyter]",
  "ruff",
  "pytest>=7",
  "pytest-cov>=5",
  "jupyter",
  "jupytext",
]

docs = [
  "sphinx",
  "furo",
  "myst-parser",
]

release = [
  "build",
  "twine",
]


[project.urls]
Homepage = "https://github.com/SidRichardsQuantum/Quantum_Singular_Value_Transformation"
Repository = "https://github.com/SidRichardsQuantum/Quantum_Singular_Value_Transformation"
Issues = "https://github.com/SidRichardsQuantum/Quantum_Singular_Value_Transformation/issues"
Documentation = "https://github.com/SidRichardsQuantum/Quantum_Singular_Value_Transformation"


[project.scripts]
qsvt = "qsvt.__main__:main"


[tool.setuptools]
package-dir = { "" = "src" }


[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]


[tool.black]
line-length = 88
target-version = ["py310"]


[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]
extend-exclude = ["*.ipynb"]


[tool.ruff.lint]
select = ["E", "F"]
