[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "qsvt-pennylane"
version = "0.2.16"
description = "Educational utilities and examples for Quantum Singular Value Transformation (QSVT) using PennyLane."
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "Sid Richards" }
]

license = "MIT"

license-files = ["LICENSE"]

classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Mathematics",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",

  "Operating System :: OS Independent",
]

dependencies = [
  "pennylane>=0.36,<0.46",
  "numpy>=1.23,<3",
  "matplotlib>=3.7,<4",
]


[project.optional-dependencies]
lint = [
  "black[jupyter]",
  "ruff",
]

test = [
  "pytest>=7",
  "pytest-cov>=5",
  "tomli>=1.1; python_version < '3.11'",
]

type = [
  "mypy>=1.10",
]

dev = [
  "black[jupyter]",
  "ruff",
  "mypy>=1.10",
  "pytest>=7",
  "pytest-cov>=5",
  "tomli>=1.1; python_version < '3.11'",
  "jupyter",
  "jupytext",
]

docs = [
  "sphinx",
  "furo",
  "myst-parser",
]

release = [
  "build",
  "setuptools>=68",
  "twine",
  "wheel",
]


[project.urls]
Homepage = "https://github.com/SidRichardsQuantum/Quantum_Singular_Value_Transformation"
Repository = "https://github.com/SidRichardsQuantum/Quantum_Singular_Value_Transformation"
Issues = "https://github.com/SidRichardsQuantum/Quantum_Singular_Value_Transformation/issues"
Documentation = "https://SidRichardsQuantum.github.io/Quantum_Singular_Value_Transformation/"


[project.scripts]
qsvt = "qsvt.__main__:main"


[tool.setuptools]
package-dir = { "" = "src" }


[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
qsvt = ["py.typed"]


[tool.pytest.ini_options]
addopts = "-ra -m 'not notebook and not integration'"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "notebook: tests that execute tutorial or real-example notebooks",
  "integration: tests that execute external scripts or heavier end-to-end paths",
]


[tool.black]
line-length = 88
target-version = ["py310"]
extend-exclude = '''
(
  \.ipynb$
  | ^docs/_build/
  | ^dist/
  | ^build/
  | ^results/
)
'''


[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]
extend-exclude = ["*.ipynb"]


[tool.ruff.lint]
select = ["B", "E", "F", "I"]


[tool.mypy]
packages = ["qsvt"]
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
